[package]
name = "gdrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
flate2 = "1.0.28"
log = "0.4.20"
thiserror = "1.0.56"
xml-rs = "0.8.20"

[dev-dependencies]
simplelog = "0.12.1"

# Cargo flamegraph requires ---rosegment because it causes stack traces to be inaccurate
[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]